Added Js for Form Validation

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               id="name"
               placeholder="Enter your name"
             />
+            <small>Error Message</small>
           </div>
           <div class="form-control">
             <label for="email">Email</label>
@@ -46,6 +47,7 @@
               id="email"
               placeholder="Enter your email address"
             />
+            <small>Error Message</small>
           </div>
           <div class="form-control">
             <label for="message">Message</label>
@@ -55,9 +57,10 @@
               name="message"
               placeholder="Enter yout message Here"
             />
+            <small>Error Message</small>
           </div>
 
-          <a class="btn">Send</a>
+          <button class="btn">Submit</button>
         </form>
       </div>
       <!-- Footer -->
